--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: UB BCH519 Week 9 & 10 R Programming
+title: UB R Programming
 author: Dr. Jonathan Bard, Dr. Mohammad Zia
 logo: ub.png
 
